--- a/index.html
+++ b/index.html
@@ -1,22 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8"/>
+  <meta charset="UTF-8" />
   <link rel="icon" type="images/png" href="/logo-dark.png" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-  <link rel="preconnect" href="https://fonts.googleapis.com"/>
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin/>
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link
-          href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap"
-          rel="stylesheet"
+    href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap"
+    rel="stylesheet"
   />
   <link
-          href="https://fonts.googleapis.com/css2?family=Sono:wght@400;500;600&display=swap"
-          rel="stylesheet"
+    href="https://fonts.googleapis.com/css2?family=Sono:wght@400;500;600&display=swap"
+    rel="stylesheet"
   />
 
-  <title>React Boilerplate</title>
+  <title>Task Demo</title>
 </head>
 <body>
 <div id="root"></div>
